# finalysis

./: .gitignore  Justfile  README.md  app.py  requirements.txt
finalysis/: Justfile  README.md  pyproject.toml
finalysis/src/finalysis/: __init__.py  __init__.pyi  util.py
finalysis/src/finalysis/instruments/: __init__.pyi  base.py  basics.py  instrument.py  instruments.py  spot.py  structured.py
finalysis/src/finalysis/plot/: __init__.py  plot.py
