[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finalysis"
version = "0.1.5"
authors = [
  {name="Marcel Claramunt", email="marcel@marcelc.uk"}
]
description = "A python library for financial instrument payoff analysis"
dependencies = [
  "numpy", "typing-extensions", "lazy-loader", "plotly", "nbformat"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/tribulnation/finalysis.git"

# [project.optional-dependencies]